--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 	<link rel="icon" type="image/png" sizes="1000x1000" href="/cat.gif"> </head>
 
 	<!--Scripts-->
-	<script async src="https://arc.io/widget.min.js#XYDJ7Da5"></script>
+	<script async src="https://arc.io/widget.min.js#w3DqyEqS"></script>
 
 <body style="background-color:lightpink;">
 	<html>
